--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  font-family: Helvetica, sans-serif;
+}
+
+html, body {
+  margin: 0;
+  background-color: black;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
